# trackasia-native

./: .env  .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.md  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CODE-OF-CONDUCT.md  CONTRIBUTING.md  DEVELOPING.md  FORK.md  LICENSE.mbgl-core.md  LICENSE.md  LICENSES.core.md  MODULE.bazel  README.md  SECURITY.md  WORKSPACE  jitpack.yml  package-lock.json  package.json  pnpm-lock.yaml  pom.xml  qt_attribution.json  trackasia_native_script2.sh
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: android-ci-pull.yml  android-ci.yml  android-device-test.yml  android-docker-base.yml  android-docker-ndk-r21b.yml  android-release.yml  build-deploy-docs.yml  gh-pages-android-api.yml  gh-pages-ios-api.yml  gh-pages-mdbook.yml  ios-ci.yml  ios-device-test.yml  ios-pre-release.yml  ios-release.yml  ios-render-test.yml  linux-ci.yml  macos-ci.yml  node-ci-mac.yml  node-ci.yml  node-release.yml  pr-bloaty-ios.yml  pr-linux-tests.yml  pr-render-test-result.yml  qt-ci.yml  update-gl-js.yml
.history/: .gitignore_20230717135244  .gitmodules_20230703164542  CHANGELOG_20230703164544.md  CODE-OF-CONDUCT_20230703164542.md  CONTRIBUTING_20230703164544.md  README_20230703164544.md  README_20230720091011.md  package_20230703164542.json  pom_20230720100106.xml  pom_20230720100117.xml  pom_20230720100120.xml  pom_20230720100127.xml  pom_20230720100140.xml  pom_20230720100158.xml  qt_attribution_20230703164544.json
.history/design-proposals/: 2022-10-27-rendering-modularization_20230703164545.md
bazel/: flags.bzl
benchmark/: CMakeLists.txt
benchmark/ios/: Info.plist
benchmark/storage/: offline_database.benchmark.cpp
design-proposals/: 2022-10-27-rendering-modularization.md  2022-11-29-metal-port.md  2023-06-17-android-annotations.md  2023-11-06-ambient-cache-initialization-speed-improvement.md  2023-11-08-complex-animatable-interactive-annotations.md
docker/: README.md  startup.sh
docs/: README.md  book.toml
docs/doxygen/: Doxyfile  MAINPAGE.md  README.md  footer.html
docs/mdbook/: README.md  book.toml
docs/src/: SUMMARY.md  introduction.md
expression-test/: BUILD.bazel  CMakeLists.txt  expression_test_parser.cpp
metrics/: android-render-test-runner-style.json  linux-clang8-release-style.json  linux-gcc8-debug-coverage-style.json  linux-gcc8-release-style.json  macos-xcode11-debug-style.json  macos-xcode11-release-style.json
metrics/ignores/: linux-drawable.json  linux-vulkan.json  platform-android-vulkan.json  platform-ios-metal.json  platform-ios.json  platform-linux.json  platform-macos.json
metrics/integration/: README.md  testem_page.html
misc/proto/: glyphs.proto  vector_tile.proto
platform/: BUILD.bazel  README.md
platform/android/: .env  CHANGELOG.md  DEVELOPING.md  DISTRIBUTE.md  LICENSE.md  (+18 more)
platform/glfw/: BUILD.bazel  CMakeLists.txt  glfw_view.cpp  main.cpp
platform/linux/: BUILD.bazel  README.md  linux.cmake
platform/qt/app/: CMakeLists.txt  main.cpp  mapwindow.cpp  mapwindow.hpp
render-test/: BUILD.bazel  CMakeLists.txt  local.properties  manifest_parser.cpp  render_test.cpp  runner.cpp
rustutils/: Cargo.toml
scripts/: codestyle.sh  collect-coverage.sh  generate-changelog.mjs  generate-shaders.js  generate-style-code.js  generate-style-code.list  generate-style-code.mjs  license.cmake  standalone.sh  style-spec.js  style-spec.mjs  update-boost.sh  update-ios-examples.mjs
shaders/: README.md  generate_shader_code.js  generate_shader_code.mjs
test/: BUILD.bazel  CMakeLists.txt
trackasia-gl-js/: .stylelintrc  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  rollup.config.csp.js  rollup.config.js
(+3734 files in other folders)
