[package]
name = "rustutils"
version = "0.0.0"
publish = false  # This crate is not intended to be published on crates.io
authors = ["TrackAsia contributors"]
description = "Core Rust utilities for TrackAsia Native"
edition = "2021"
license = "BSD-2-Clause"
repository = "https://github.com/trackasia/trackasia-native"
rust-version = "1.78.0"

[lib]
crate-type = ["staticlib"]

[dependencies]
csscolorparser = "0.7.0"
cxx = "1"

[profile.release]
lto = true
codegen-units = 1
